<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/overview_text_view"
            style="@style/edittextfield"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/overview"
            android:textSize="15sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="1"
                android:id="@+id/name_text_view"
                style="@style/edittextfield"
                android:text="@string/name" />

            <EditText
                android:layout_weight="2"
                android:id="@+id/name_text_field"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/age_text_view"
                android:layout_weight="1"
                style="@style/edittextfield"
                android:text="@string/age" />

            <EditText
                android:id="@+id/age_text_field"
                android:layout_width="200dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:inputType="number" />

        </LinearLayout>



        <TextView
            style="@style/edittextfield"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="20dp"
            android:text="@string/other_details"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fees"
                android:layout_weight="1"
                style="@style/edittextfield"
                android:text="@string/feess" />

            <EditText
                android:id="@+id/feess_text_field"
                android:layout_width="200dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:hint="@string/feess"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/address_textview"
                style="@style/edittextfield"
                android:layout_weight="1"
                android:text="@string/address" />

            <EditText
                android:id="@+id/adress_text_field"
                android:layout_width="200dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:hint="@string/address" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/gender"
                    android:layout_weight="1"
                    style="@style/edittextfield"

                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/gender" />

                <TextView
                    android:id="@+id/classs"
                    android:layout_weight="1"
                    style="@style/edittextfield"
                    android:layout_marginLeft="70dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/classs" />

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Spinner
                android:layout_weight="1"
                android:id="@+id/spinner_gender"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginLeft="20dp"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown" />

            <Spinner
                android:id="@+id/spinner_class"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginLeft="50dp"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown" />
        </LinearLayout>



        <TextView
            style="@style/edittextfield"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:padding="20dp"
            android:text="@string/guardian_details"
            android:textSize="10sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/guardian"
                style="@style/edittextfield"
                android:text="@string/name" />

            <EditText
                android:id="@+id/guardian_name_text_field"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:hint="@string/name"
                android:inputType="textCapWords" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/guardian_phone_textview"
                style="@style/edittextfield"
                android:text="@string/phone_number" />

            <EditText
                android:id="@+id/phone_number_text_field"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="28dp"
                android:layout_marginStart="28dp"
                android:hint="@string/phone_number"
                android:inputType="phone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/occupation_text_view"
                style="@style/edittextfield"
                android:text="@string/occupation" />

            <EditText
                android:id="@+id/occupation_text_field"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="28dp"
                android:hint="@string/occupation" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>

